--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,7 @@ body {
     justify-content: space-around;
     align-items: center;
     box-shadow: none;
+    padding: 1rem;
     border-radius: 0px;
     margin-top: 2rem;
     height: 10vh;
